--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,10 @@ dependencies = [
     "google-cloud-firestore (>=2.20.0,<3.0.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "jinja2 (>=3.1.5,<4.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "cloud-sql-python-connector[pg8000] (>=1.6.0,<2.0.0)",
+    "sqlalchemy (>=2.0.30,<3.0.0)"
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -28,4 +29,3 @@ black = "^25.1.0"
 flake8 = "^7.1.2"
 pytest-asyncio = "^0.25.3"
 mypy = "^1.15.0"
-
