--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "jinja2 (>=3.1.5,<4.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "cloud-sql-python-connector[pg8000] (>=1.6.0,<2.0.0)",
-    "sqlalchemy (>=2.0.30,<3.0.0)"
+    "sqlalchemy (>=2.0.30,<3.0.0)",
+    "google-cloud-recaptcha-enterprise (>=1.9.0,<2.0.0)"
 ]
 
 [build-system]
