--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
         name: Authenticate to GCP
         with:
           project_id: "strawhattendance" # update with your project ID
-          workload_identity_provider: "projects/163952866759/locations/global/workloadIdentityPools/github" # update with your Workload Identity Pool
+          workload_identity_provider: "projects/163952866759/locations/global/workloadIdentityPools/github/providers/attendance"
 
       # configure/login with docker
       - name: gcloud Configure Docker
